# Summergame

./: CMakeLists.txt  CMakePresets.json  Makefile  main.c  raylibhelloworld.c
src/: main.c
